Added multithreading for optimization of price scraping